fixed the css for signup page so container now covers all input bars and buttons at bottom have their own space

--- a/app/static/signup.css
+++ b/app/static/signup.css
@@ -42,7 +42,7 @@ main {
 .loginPage {
     margin: 0 50px;
     width: 520px;
-    margin-bottom: 10px;
+    margin-bottom: auto;
     align-items: center;
 }
 
@@ -103,4 +103,8 @@ input {
 .button:hover {
     background-color: blue;
     color: white;
+}
+
+#loginButton {
+    color: black
 }
